# DFCompressor

./: CMakeLists.txt  README.md  build.ps1  setup_libs.ps1
installer/: LICENSE.txt  README.txt  setup.iss
resources/: app.rc  resources.qrc
resources/styles/: dark.qss  light.qss
src/: main.cpp
src/core/: Job.cpp  Job.h  JobQueue.cpp  JobQueue.h  MediaInfo.cpp  MediaInfo.h  Settings.cpp  Settings.h
src/processors/: GPUDetector.cpp  GPUDetector.h  ImageProcessor.cpp  ImageProcessor.h  ProcessorFactory.cpp  ProcessorFactory.h  VideoProcessor.cpp  VideoProcessor.h
src/ui/: DropZone.cpp  DropZone.h  FileListWidget.cpp  FileListWidget.h  MainWindow.cpp  MainWindow.h  PreviewWidget.cpp  PreviewWidget.h  ProgressWidget.cpp  ProgressWidget.h  SettingsDialog.cpp  SettingsDialog.h  ThemeManager.cpp  ThemeManager.h
src/utils/: FileUtils.cpp  FileUtils.h  FormatUtils.cpp  FormatUtils.h  Logger.cpp  Logger.h
